# PCR-Net-Temperature-Downscaling

./: .gitignore  CHANGELOG.md  CITATION.cff  HANDOFF.md  LICENSE  README.md  config.py  environment.yml  pyproject.toml  requirements.txt
assets/demo_data/: README.md
configs/: README.md
configs/artifacts/: artifact_manifest.json
configs/data/: default.yaml  example_case.yaml
configs/demos/: data_fetch_minimal.yaml
configs/model/: default.yaml
configs/physical/: physical.yaml
docs/: configuration.md  data_and_artifacts.md  data_contract.md  data_part_README.md  installation.md  manual_downloads.md  model_and_workflow.md  model_part_README.md  model_workflows.md  quick_start.md  reproducibility.md  troubleshooting.md  user_guide.md
examples/: README.md
examples/01_data_fetch/: README.md  run_demo.py
examples/02_train_and_test/: README.md  run_demo.py
examples/03_visualization/: README.md  run_demo.py
examples/04_ablation_training/: README.md  run_demo.py
examples/05_baseline_training_and_test/: README.md  run_demo.py
examples/06_compute_profile/: README.md  run_demo.py
outputs/: README.md
scripts/: download_release_artifact.py  run_physical.py  run_pipeline.py
src/data_pipeline/: __init__.py  cli.py  config.py  pipeline.py  registry.py
src/open_source/: README.md  __init__.py  catboost_training.py  spatial_inference.py  unet_datasets.py  unet_losses.py  unet_models.py  unet_training.py
src/pcr_downscaling/: __init__.py  compute_profile.py  demo.py  demo_cases.py  fixtures.py
src/physical_base/: __init__.py  cli.py  config.py  tbase.py  (+3 more)
(+77 files in other folders)
