[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pcr-net-temperature-downscaling"
version = "0.1.0"
description = "Open-source data, physical-base, and PCR-Net workflows for temperature downscaling."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "h5py",
  "numpy",
  "pandas",
  "pyyaml",
  "requests",
  "scipy",
  "tqdm",
]

[project.optional-dependencies]
data = [
  "cdsapi",
  "earthengine-api",
  "geemap",
  "gdal",
  "pyproj",
  "rasterio",
  "shapely",
  "xarray",
]
model = [
  "catboost",
  "joblib",
  "matplotlib",
  "pyarrow",
  "scikit-learn",
  "thop",
  "torch",
  "torchvision",
]
dev = [
  "pytest",
]
all = [
  "cdsapi",
  "earthengine-api",
  "geemap",
  "gdal",
  "pyproj",
  "rasterio",
  "shapely",
  "xarray",
  "catboost",
  "joblib",
  "matplotlib",
  "pyarrow",
  "scikit-learn",
  "thop",
  "torch",
  "torchvision",
  "pytest",
]

[project.scripts]
data-pipeline = "data_pipeline.cli:main"
physical-base = "physical_base.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
